# sig_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: manifest.yaml
doc/html/: RobotController_8cpp.html  RobotController_8cpp__incl.map  RobotController_8cpp__incl.md5  RobotController_8cpp_source.html  RobotController_8hpp.html  RobotController_8hpp__dep__incl.map  RobotController_8hpp__dep__incl.md5  RobotController_8hpp__incl.map  RobotController_8hpp__incl.md5  RobotController_8hpp_source.html  SimObjControllerCreate_8cpp.html  SimObjControllerCreate_8cpp__incl.map  SimObjControllerCreate_8cpp__incl.md5  SimObjControllerCreate_8cpp_source.html  SimObjControllerSrv_8cpp.html  SimObjControllerSrv_8cpp__incl.map  SimObjControllerSrv_8cpp__incl.md5  SimObjControllerSrv_8cpp_source.html  SimObjControllerTopic_8cpp.html  SimObjControllerTopic_8cpp__incl.map  SimObjControllerTopic_8cpp__incl.md5  SimObjControllerTopic_8cpp_source.html  SimObjController_8cpp.html  SimObjController_8cpp__incl.map  SimObjController_8cpp__incl.md5  SimObjController_8cpp_source.html  SimObjController_8hpp.html  SimObjController_8hpp__dep__incl.map  SimObjController_8hpp__dep__incl.md5  SimObjController_8hpp__incl.map  SimObjController_8hpp__incl.md5  SimObjController_8hpp_source.html  annotated.html  (+65 more)
msg/: SetJointVelocity.msg  SetWheel.msg
sig_ros/: CMakeLists.txt  package.xml
sig_ros/test/: CMakeLists.txt  test.cpp  test.launch
src/: ros_controller.cpp  sig_controller.cpp  sig_controller.hpp
srv/: getObjPosition.srv  getRotation.srv
user/: CMakeLists.txt  package.xml
(+122 files in other folders)
